@@ -6,6 +6,8 @@ ctags-@VERSION@ (@DATE@)
 * Added support for new language: VHDL, contributed by Nicolas Vincent [VHDL, Bug #1943306].
 * Added regex support when compiling with MinGW. Gnu regex module now included in all distributions.
 * Added support for class and member variables [PHP, Bug #1037086].
+* Added support for recent enhancements to Eiffel language [Eiffel].
+* Added support for ASP classes, contributed by Zendhi Nagao; changes meaning of 'c' kind flag [ASP].
 * Fixed detection of triple strings inside other strings [Python, Bug #1988130].
 * Fixed an endless loop with comments in triple strings [Python, Bug #1988027].
 * Fixed bug where functions were sometimes seen as methods [Python, Bug #1988026].
